projects/dms/deal-management-service/k8s-config/sit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dms-deal
  name: dms-deal-svc
  namespace: dms-sit
spec:
  ports:
    - port: 8010
      protocol: TCP
      targetPort: 8010
  selector:
    app: dms-deal
