projects/dms/deal-management-service/k8s-config/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dms-deal
  namespace: dms-sit
  labels:
    app: dms-deal
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: public
  tls:
    - hosts:
      -  zenvo-sit-deal.coherent.in
      secretName: dms-deal-tls
  rules:
  - host: "zenvo-sit-deal.coherent.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: dms-deal-svc
            port: 
              number: 8010
